--- a/styles/global.css
+++ b/styles/global.css
@@ -5,12 +5,14 @@
 }
 
 body {
-  min-width: 1100px;
-  max-width: 1440px;
+  width: 1100px;
   margin: 0 auto;
-  padding: 0;
   font-family: Raleway, sans-serif;
 }
+
+
+
+
 
 h1,
 h2,
