--- a/styles/style.css
+++ b/styles/style.css
@@ -1,270 +1,335 @@
-* {
-  box-sizing: border-box;
-}
-
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px;
+  padding-top: 92px;
+  padding-left: 24px;
+  padding-bottom: 92px;
+  padding-right: 24px;
 }
 
-.header__links-list {
+.header_menu {
+  display: flex;
+  justify-self: center;
+
+}
+
+.menu_links {
   display: flex;
   gap: 32px;
+  list-style-type: circle;
+  padding-right: 7px;
 }
 
-.header__links-list-item {
+.link_list {
   font-size: 18px;
-  list-style: circle;
+  font-weight: 400;
+  text-underline-offset: 4px; 
+  text-decoration: underline;
 }
 
-.header__links-list-item-no-bullit {
-  list-style: none;
-}
-
-.header__link {
-  border-bottom: 1px solid;
+.main_link_marker {
+  list-style-type: none; 
   text-decoration: none;
 }
 
-.header__link_active {
-  border-bottom: none;
+.link_main {
+  text-decoration: none;
 }
 
-.header__logo {
+.header_logo {
   width: 148px;
+  height: 105px;
 }
 
 .address {
-  max-width: 240px;
+  padding-left: 185px;
   font-size: 18px;
-  font-style: normal;
-  line-height: 1.35;
+  line-height: 24.3px;
+  letter-spacing: 0.18px;
+  font-family: "Raleway", sans-serif;
+  list-style-type: none;
+  font-style: normal;  
 }
 
-.header__address {
-  justify-self: end;
-}
-
-.address a {
-  border-bottom: 1px solid;
-  text-decoration: none;
-}
 
 .cover {
   position: relative;
-  padding: 165px 50px 50px;
   background-image: url(../images/cover.jpg);
-  background-position: center;
   background-size: cover;
-}
-
-.cover__title {
-  position: relative;
-  z-index: 1;
-  margin-bottom: 135px;
-  color: #fff;
-  font-size: 100px;
-  line-height: 1.15;
-  letter-spacing: 0.3em;
+  color: white;
   text-transform: uppercase;
-}
-
-.cover__description {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 78px;
-}
-
-.cover__description-text {
-  color: #fff;
-  font-size: 22px;
-  text-transform: uppercase;
-  word-spacing: 18px;
+  z-index: 0;
+  background-repeat: no-repeat;
+  background-position: center; 
 }
 
 .overlay {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   position: absolute;
-  inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
-.aligned-text {
+.cover_title { 
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 165px 50px 147px;
+  gap: 20px;   
+} 
+ 
+.cover_title span { 
+  font-size: 100px; 
+  font-weight: 700;  
+  line-height: 100%;  
+}
+
+.text_cover {
   display: block;
-  margin-top: 20px;
-  line-height: 1;
+  line-height: 125px;
 }
 
-.aligned-text_center {
+.text_center {
+  text-align: center;
+  line-height: 125px;
+}
+
+.text_right {
+  text-align: right;
+  line-height: 120px;  
+}
+
+.text_cover { 
+  letter-spacing: 30px; /* буква о разрыв 30, буквы те разрыв 30, буквы ад разрыв 30 */
+}
+
+.text_cover .no_letter_spacing {
+  letter-spacing: 0px; /* сброс межбуквенного разрыва */ 
+}
+
+.text_cover .letter_spacing {
+  letter-spacing: 60px; /* буквы но разрыв 60, буквы бе разрыв 60, буква н разрыв 60 */ 
+}
+
+.cover_description {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-evenly;
+  padding: 0px 50px 55px 78px;
+  gap: 79px;
+}
+
+.cover_text {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  word-spacing: 18px;
+}
+
+.button {
+  width: 256px;
+  height: 51px;
+  border: 1px solid white;
+  background-color: transparent;
+  font-family: "Raleway", sans-serif;
+  color: #fff;
+  font-size: 22px;
+  line-height: 51px;
+  font-weight: 500;
   text-align: center;
 }
 
-.aligned-text_right {
-  text-align: right;
-}
-
-.letter-spacing-extended {
-  letter-spacing: 0.6em;
-}
-
-.no-letter-spacing {
-  letter-spacing: initial;
-}
-
-.bet-button {
-  border: 1px solid #fff;
-  padding: 12px 32px;
-  color: #fff;
-  font-weight: normal;
-  font-size: 22px;
+.title_lots {
+  padding-top: 179px;
+  padding-bottom: 26px;
+  padding-left: 64px;
+  color: #000;
+  font-size: 40px;
+  font-weight: 700;
   text-transform: uppercase;
-  background-color: transparent;
 }
 
-.card-link {
-  display: block;
-  height: 100%;
-  text-decoration: none;
+.container_lots {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  gap: 25px;
+  justify-content: flex-start; /* указал start */ 
+  padding: 0; 
+  margin: 0 auto;
+  margin-left: 20px; /* левый отступ чтобы совпадало с макетом */  
+}
+
+.card_lots a { 
+  text-decoration: none; /* дефолтное подчеркивание текста убрано */ 
+}
+
+.card_lots {
+  max-width: 334px;
+  min-height: 563px;
+  flex-grow: 1;
 }
 
 .card {
   position: relative;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  padding: 51px 40px 48px;
   justify-content: space-between;
-  height: 100%;
-  padding: 50px 40px;
-  color: #fff;
-  background-color: #000;
-  background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.card__text {
-  z-index: 1;
-  font-size: 20px;
+.card_about_cinema {
+  background-image: url(./../images/card-lot-01.jpg);
 }
 
-.card__title {
-  z-index: 1;
+.card_about_book {
+  background-image: url(./../images/card-lot-02.jpg);
+}
+
+.card_about_picture {
+  background-image: url(./../images/card-lot-03.jpg);
+}
+
+.card_title {
+  color: white;
   font-size: 22px;
-  text-decoration: underline;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
   text-transform: uppercase;
 }
 
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-}
-
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-}
-
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
-}
-
-.lots__cards-list-item {
-  flex-grow: 1;
-  width: 430px;
-  min-height: 450px;
-}
-
-.lots__cards-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 25px;
-  list-style: none;
-}
-
-.lots {
-  padding: 180px 50px 0;
-}
-
-.lots__look-more-link {
-  display: inline-block;
-  margin-top: 30px;
-  margin-left: 40px;
-  border-bottom: 1px solid;
-  color: #000;
-  font-size: 20px;
+.link_lots { 
   text-decoration: none;
 }
+.text_on_card {
+  color: white;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; 
+}
 
-.lots__heading {
-  font-size: 40px;
-  text-transform: uppercase;
-  margin-bottom: 27px;
-  padding: 0 40px;
+.view_more {
+  display: block;
+  text-underline-offset: 3px;
+  padding-top: 30px;
+  color: black;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  margin-left: 64px;
 }
 
 .about {
-  display: grid;
-  grid-template-columns: 430px 1fr;
-  justify-content: space-between;
-  gap: 25px;
-  padding: 180px 50px;
+  margin-top: 148px;
 }
 
-.about__logo {
+.about_container {
+  display: grid;
+  grid-template-columns: 334px repeat(1, 1fr);
+  gap: 25px;
+  padding: 34px 24px 0px;
+}
+
+.about_logo {
+  justify-self: center;
+  background-color: #000;
+  border-radius: 50%;
+  width: 240px;
+  height: 240px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 240px;
-  height: 240px;
-  margin: auto;
-  border-radius: 50%;
-  background-color: #000;
 }
 
-.about__logo-image {
+.about_logo_image {
   width: 148px;
   height: 114px;
-  top: 64px;
-  left: 46.48px;
 }
 
-.about__title {
-  margin: 100px 0;
-  font-size: 40px;
-  text-transform: uppercase;
-}
-
-.about__text {
+.about_content {
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 24px;
+  padding-top: 100px;
+}
+
+.title_about {
+  color: black;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+}
+
+.about_text {
+  align-self: flex-start;
+  font-family: "Raleway", sans-serif;
+  color: black;
   font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.text_up {
+  padding-top: 76px;
+}
+
+.text_down {
+  padding-top: 25px;
 }
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr min-content 1fr;
-  padding: 0 50px 183px;
+  grid-template-columns: auto 1fr auto;
+  padding: 180px 50px 88px;
+  gap: 140px;
+  align-items: flex-start;
 }
 
-.footer__menu-link_active {
-  border-bottom: none;
+.footer_address {
+  font-style: normal;
+  padding-left: 0px; 
 }
 
-.footer__menu-list {
-  font-size: 18px;
+.footer_menu {
+  padding-left: 35px;
+}
+
+.footer_menu_links {
+  list-style-type: none;
+  text-underline-offset: 3px;
+}
+
+.footer_links {
+  color: black;
   text-align: center;
-  list-style: none;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
 }
 
-.footer__social-icon {
+.footer_main {
+  text-decoration: none;
+}
+
+.images_footer {
   width: 48px;
+  height: 48px;
 }
 
-.footer__social-list {
+.footer_images {
   display: flex;
-  justify-self: end;
   gap: 48px;
-  list-style: none;
-  flex-wrap: wrap;
 }
