--- a/styles/style.css
+++ b/styles/style.css
@@ -2,45 +2,46 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding-top: 92px;
-  padding-left: 24px;
-  padding-bottom: 92px;
-  padding-right: 24px;
+  padding: 92px 24px;
 }
 
-.header_menu {
+.nav-bar {
   display: flex;
   justify-self: center;
-
 }
 
-.menu_links {
+.nav-list {
   display: flex;
   gap: 32px;
   list-style-type: circle;
   padding-right: 7px;
 }
 
-.link_list {
+.nav-item {
   font-size: 18px;
   font-weight: 400;
   text-underline-offset: 4px;
 }
 
-.main_link_marker {
+.nav-item--active {
   list-style-type: none;
 }
 
-.link_main {
+.nav-link {
+  color: inherit;
+  text-decoration: underline;
+}
+
+.nav-link--main {
   text-decoration: none;
 }
 
-.header_logo {
+.logo {
   width: 148px;
   height: 105px;
 }
 
-.address {
+.contact-list {
   padding-left: 185px;
   font-size: 18px;
   line-height: 24.3px;
@@ -49,11 +50,12 @@
   list-style-type: none;
 }
 
-.address_numbers {
+.contact-phone {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
-.street_address {
+
+.contact-address {
   font-size: 18px;
   font-weight: 400;
   line-height: 24.3px;
@@ -62,87 +64,76 @@
   font-family: "Raleway", sans-serif;
 }
 
-.cover {
+.hero-section {
   position: relative;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   color: white;
   text-transform: uppercase;
-  z-index: 0;
   background-repeat: no-repeat;
   background-position: center;
+  z-index: 0;
 }
 
-.overlay {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.hero-overlay {
   position: absolute;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
-  width: 100%;
-  height: 100%;
   z-index: -1;
 }
 
-.cover_title {
+.hero-title {
   display: flex;
   flex-direction: column;
   padding: 165px 50px 147px;
   gap: 20px;
 }
 
-.cover_title span {
+.hero-word {
   font-size: 100px;
   font-weight: 700;
   line-height: 100%;
   letter-spacing: 30px;
-}
-
-.text_cover {
-  position: relative;
   align-self: flex-start;
-  line-height: 115%;
-  transform: translateY(2px);
 }
 
-.text_center {
+.hero-word--center {
   align-self: center;
   position: relative;
   top: 15px;
 }
 
-.text_right {
+.hero-word--right {
   align-self: flex-end;
   position: relative;
   top: 15px;
   left: 30px;
 }
 
-.text_cover .spacing {
+.hero-space {
   letter-spacing: 60px;
 }
 
-.text_cover .no_spacing {
+.hero-nospace {
   letter-spacing: 60px;
 }
 
-.cover_description {
+.hero-description {
   display: flex;
   align-items: baseline;
   justify-content: space-evenly;
-  padding: 0px 50px 55px 78px;
+  padding: 0 50px 55px 78px;
   gap: 79px;
 }
 
-.cover_text {
+.hero-subtitle {
   font-size: 22px;
   font-weight: 400;
   line-height: 28px;
   word-spacing: 18px;
 }
 
-.button {
+.hero-button {
   width: 256px;
   height: 51px;
   border: 1px solid white;
@@ -155,17 +146,20 @@
   text-align: center;
 }
 
-.title_lots {
+.gallery-section {
   padding-top: 179px;
-  padding-bottom: 26px;
+}
+
+.gallery-title {
   padding-left: 64px;
+  padding-bottom: 26px;
   color: #000;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.container_lots {
+.gallery-grid {
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
@@ -173,38 +167,40 @@
   justify-content: center;
 }
 
-.card_lots {
+.gallery-card {
   max-width: 334px;
   min-height: 563px;
   flex-grow: 1;
-}
-
-.card {
   position: relative;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  z-index: -2;
-  padding: 51px 40px 48px;
   justify-content: space-between;
+  padding: 51px 40px 48px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.card_1 {
-  background-image: url(./../images/card-lot-01.jpg);
+.gallery-card--film {
+  background-image: url(../images/card-lot-01.jpg);
 }
 
-.card_2 {
-  background-image: url(./../images/card-lot-02.jpg);
+.gallery-card--book {
+  background-image: url(../images/card-lot-02.jpg);
 }
 
-.card_3 {
-  background-image: url(./../images/card-lot-03.jpg);
+.gallery-card--painting {
+  background-image: url(../images/card-lot-03.jpg);
 }
 
-.card_title {
+.card-overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
+
+.card-heading {
   color: white;
   font-size: 22px;
   font-weight: 700;
@@ -213,15 +209,14 @@
   text-transform: uppercase;
 }
 
-.text_on_card {
+.card-description {
   color: white;
   font-size: 20px;
-  font-style: normal;
   font-weight: 400;
   line-height: 120%;
 }
 
-.view_more {
+.gallery-more {
   display: block;
   text-underline-offset: 3px;
   padding-top: 30px;
@@ -232,18 +227,18 @@
   margin-left: 64px;
 }
 
-.about {
+.about-section {
   margin-top: 148px;
 }
 
-.about_container {
+.about-wrapper {
   display: grid;
-  grid-template-columns: 334px repeat(1, 1fr);
+  grid-template-columns: 334px 1fr;
   gap: 25px;
-  padding: 34px 24px 0px;
+  padding: 34px 24px 0;
 }
 
-.about_logo {
+.about-logo {
   justify-self: center;
   background-color: #000;
   border-radius: 50%;
@@ -254,26 +249,26 @@
   align-items: center;
 }
 
-.about_logo_image {
+.about-logo-img {
   width: 148px;
   height: 114px;
 }
 
-.about_content {
+.about-content {
   display: flex;
   flex-direction: column;
   gap: 24px;
   padding-top: 100px;
 }
 
-.title_about {
+.about-title {
   color: black;
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
 }
 
-.about_text {
+.about-text {
   align-self: flex-start;
   font-family: "Raleway", sans-serif;
   color: black;
@@ -282,15 +277,15 @@
   line-height: 24px;
 }
 
-.text_1_about {
-  padding-top: 76px;
-}
-
-.text_2_about {
+.about-paragraph {
   padding-top: 25px;
 }
 
-.footer {
+.about-paragraph:first-child {
+  padding-top: 76px;
+}
+
+.site-footer {
   display: grid;
   grid-template-columns: auto 1fr auto;
   padding: 180px 50px 88px;
@@ -298,37 +293,38 @@
   align-items: flex-start;
 }
 
-.footer_address {
-  padding-left: 0px;
+.contact-list--footer {
+  padding-left: 0;
 }
 
-.footer_menu {
+.footer-nav {
   padding-left: 35px;
 }
 
-.footer_menu_links {
+.footer-nav-list {
   list-style-type: none;
   text-underline-offset: 3px;
 }
 
-.footer_links {
+.footer-link {
   color: black;
   text-align: center;
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
+  text-decoration: underline;
 }
 
-.footer_main {
+.footer-link--main {
   text-decoration: none;
 }
 
-.images_footer {
-  width: 48px;
-  height: 48px;
-}
-
-.footer_images {
+.social-links {
   display: flex;
   gap: 48px;
+}
+
+.social-icon {
+  width: 48px;
+  height: 48px;
 }
