--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,45 @@
-.magic-header {
+.hdr {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 24px;
+  padding-top: 92px;
+  padding-left: 24px;
+  padding-bottom: 92px;
+  padding-right: 24px;
 }
 
-.nav-bar {
+.hdr_nav {
   display: flex;
   justify-self: center;
 }
 
-.dream-links {
+.nav_list {
   display: flex;
   gap: 32px;
   list-style-type: circle;
   padding-right: 7px;
 }
 
-.dream-item {
+.nav_item {
   font-size: 18px;
   font-weight: 400;
   text-underline-offset: 4px;
 }
 
-.moon-marker {
+.main_item {
   list-style-type: none;
 }
 
-.link-path {
-  color: inherit;
-  text-decoration: underline;
-}
-
-.main-path {
+.nav_link {
   text-decoration: none;
 }
 
-.brand-symbol {
+.hdr_logo {
   width: 148px;
   height: 105px;
 }
 
-.contact-soul {
+.addr_list {
   padding-left: 185px;
   font-size: 18px;
   line-height: 24.3px;
@@ -50,12 +48,12 @@
   list-style-type: none;
 }
 
-.contact-call {
+.addr_phone {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
 
-.place-echo {
+.addr_street {
   font-size: 18px;
   font-weight: 400;
   line-height: 24.3px;
@@ -64,7 +62,7 @@
   font-family: "Raleway", sans-serif;
 }
 
-.dream-hero {
+.cover_sec {
   position: relative;
   background-image: url(../images/cover.jpg);
   background-size: cover;
@@ -75,49 +73,55 @@
   background-position: center;
 }
 
-.veil-shadow {
+.overlay_layer {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   position: absolute;
-  inset: 0;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
   z-index: -1;
 }
 
-.hero-chant {
+.cover_heading {
   display: flex;
   flex-direction: column;
   padding: 165px 50px 147px;
   gap: 20px;
 }
 
-.hero-word {
+.cover_word {
   font-size: 100px;
   font-weight: 700;
   line-height: 100%;
   letter-spacing: 30px;
-  align-self: flex-start;
-  transform: translateY(2px);
-}
-
-.word-center {
-  align-self: center;
-  top: 15px;
   position: relative;
 }
 
-.word-right {
+.cover_center {
+  align-self: center;
+  position: relative;
+  top: 15px;
+}
+
+.cover_right {
   align-self: flex-end;
   position: relative;
   top: 15px;
   left: 30px;
 }
 
-.hero-space, .letter-no-space {
+.letter_spacing {
   letter-spacing: 60px;
 }
 
-.hero-vision {
+.no_letter_spacing {
+  letter-spacing: 60px;
+}
+
+.cover_info {
   display: flex;
   align-items: baseline;
   justify-content: space-evenly;
@@ -125,14 +129,14 @@
   gap: 79px;
 }
 
-.vision-text {
+.cover_desc {
   font-size: 22px;
   font-weight: 400;
   line-height: 28px;
   word-spacing: 18px;
 }
 
-.wish-button {
+.btn {
   width: 256px;
   height: 51px;
   border: 1px solid white;
@@ -145,33 +149,36 @@
   text-align: center;
 }
 
-.gallery-section {
+.lots_title {
   padding-top: 179px;
-}
-
-.gallery-title {
-  padding-left: 64px;
   padding-bottom: 26px;
+  padding-left: 64px;
   color: #000;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.lot-field {
+.lots_container {
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
   gap: 25px;
   justify-content: center;
 }
 
-.story-card {
+.lot_card_wrap {
   max-width: 334px;
   min-height: 563px;
   flex-grow: 1;
+}
+
+.lot_card {
   position: relative;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  z-index: -2;
   padding: 51px 40px 48px;
   justify-content: space-between;
   background-size: cover;
@@ -179,11 +186,19 @@
   background-position: center;
 }
 
-.dream-one { background-image: url(./../images/card-lot-01.jpg); }
-.dream-two { background-image: url(./../images/card-lot-02.jpg); }
-.dream-three { background-image: url(./../images/card-lot-03.jpg); }
+.lot_card_1 {
+  background-image: url(./../images/card-lot-01.jpg);
+}
 
-.story-title {
+.lot_card_2 {
+  background-image: url(./../images/card-lot-02.jpg);
+}
+
+.lot_card_3 {
+  background-image: url(./../images/card-lot-03.jpg);
+}
+
+.lot_title {
   color: white;
   font-size: 22px;
   font-weight: 700;
@@ -192,35 +207,37 @@
   text-transform: uppercase;
 }
 
-.story-text {
+.lot_desc {
   color: white;
   font-size: 20px;
+  font-style: normal;
   font-weight: 400;
   line-height: 120%;
 }
 
-.more-dreams {
+.view_more_link {
   display: block;
   text-underline-offset: 3px;
   padding-top: 30px;
   color: black;
   font-size: 20px;
   font-weight: 400;
+  line-height: 23.48px;
   margin-left: 64px;
 }
 
-.story-about {
+.about_sec {
   margin-top: 148px;
 }
 
-.about-realm {
+.about_wrap {
   display: grid;
-  grid-template-columns: 334px 1fr;
+  grid-template-columns: 334px repeat(1, 1fr);
   gap: 25px;
   padding: 34px 24px 0px;
 }
 
-.about-symbol {
+.about_logo_wrap {
   justify-self: center;
   background-color: #000;
   border-radius: 50%;
@@ -231,25 +248,26 @@
   align-items: center;
 }
 
-.symbol-mark {
+.about_logo_img {
   width: 148px;
   height: 114px;
 }
 
-.about-essence {
+.about_content_wrap {
   display: flex;
   flex-direction: column;
   gap: 24px;
   padding-top: 100px;
 }
 
-.about-title {
+.about_title {
   color: black;
   font-size: 40px;
   font-weight: 700;
+  line-height: 46.96px;
 }
 
-.about-texts {
+.about_text_wrap {
   align-self: flex-start;
   font-family: "Raleway", sans-serif;
   color: black;
@@ -258,10 +276,15 @@
   line-height: 24px;
 }
 
-.about-paragraph:first-child { padding-top: 76px; }
-.about-paragraph:last-child { padding-top: 25px; }
+.about_text_1 {
+  padding-top: 76px;
+}
 
-.site-footer {
+.about_text_2 {
+  padding-top: 25px;
+}
+
+.ftr {
   display: grid;
   grid-template-columns: auto 1fr auto;
   padding: 180px 50px 88px;
@@ -269,13 +292,20 @@
   align-items: flex-start;
 }
 
-.footer-soul { padding-left: 0px; }
+.ftr_addr_list {
+  padding-left: 0px;
+}
 
-.footer-nav { padding-left: 35px; }
+.ftr_nav {
+  padding-left: 35px;
+}
 
-.footer-nav-list { list-style-type: none; text-underline-offset: 3px; }
+.ftr_nav_list {
+  list-style-type: none;
+  text-underline-offset: 3px;
+}
 
-.link-spirit {
+.ftr_nav_item {
   color: black;
   text-align: center;
   font-size: 18px;
@@ -283,14 +313,16 @@
   line-height: normal;
 }
 
-.footer-link--main { text-decoration: none; }
+.ftr_main_link {
+  text-decoration: none;
+}
 
-.footer-icons {
+.ftr_icons_wrap {
   display: flex;
   gap: 48px;
 }
 
-.icon-mark {
+.ftr_icon {
   width: 48px;
   height: 48px;
 }
